# devlock

./: .dockerignore  .editorconfig  .env-example  .gitignore  .neoconf.json  .pre-commit-config.yaml  .secrets.baseline  Makefile  bun.lockb  tsconfig.json
.github/workflows/: docker-image-active-matches-scraper.yaml  docker-image-api.yaml  docker-image-db-ingest.yaml  docker-image-nsu-proxy.yaml  docker-image-parser.yaml  docker-image-spectator.yaml  docker-image-user-ingest.yaml  secret-scanner.yaml
active-matches-scraper/: Cargo.toml  Dockerfile  docker-compose.yaml
active-matches-scraper/src/: main.rs  rmq.rs  s3.rs
api/: Dockerfile  docker-compose.yaml  requirements.txt
api/devlock_api/: datarepo.py  limiter.py  main.py
authentik/: README.md  docker-compose.yaml
clickhouse/: README.md  config.xml  docker-compose.yaml
clickhouse/migrations/: 01_create_match_info_table.sql  02_create_match_player_table.sql  03_create_active_matches_table.sql  04_create_match_salts_table.sql
db-ingest/: Cargo.toml  Dockerfile  docker-compose.yaml
db-ingest/src/: main.rs  rmq.rs  s3.rs
db-ingest/src/ingestors/: clickhouse_ingestor.rs  ingestor.rs  mod.rs
db-ingest/src/models/: active_match.rs  clickhouse_active_match.rs  clickhouse_match_metadata.rs  compression.rs  enums.rs  error.rs  file_data.rs  file_type.rs  mod.rs  parse_result.rs
db-ingest/src/parsers/: active_matches_json_lines_parser.rs  metadata_content_parser.rs  metadata_parser.rs  mod.rs  parser.rs
monitoring/: README.md  docker-compose.yaml  loki.yaml  prometheus.yaml  promtail.yaml
monitoring/grafana/: dashboard.yaml  datasource.yaml
nsu-proxy/: .env-example  .gitignore  .neoconf.json  Dockerfile  README.md  biome.json  bun.lockb  crawler.ts  docker-compose.yaml  package.json  tsconfig.json
nsu-proxy/src/: common.ts  log.ts  util.ts
parser/: Cargo.toml  Dockerfile  docker-compose.yaml
parser/src/: main.rs  models.rs  rmq.rs  s3.rs
patches/: @types%2Fsteam-user@5.0.3.patch
rabbitmq/: README.md  docker-compose.yaml
salt-scraper/: .env-example  Cargo.toml
salt-scraper/src/: main.rs
src/: log.ts  util.ts
user-ingest/: Cargo.toml  Dockerfile  docker-compose.yaml
user-ingest/src/: download.rs  main.rs  models.rs  rmq.rs  s3.rs
webserver/: docker-compose.yaml
webserver-local/: README.md  docker-compose.yaml
(+56 files in other folders)
