[package]
name = "active-matches-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
rust-s3 = "0.35.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.128"
async-compression = { version = "0.4.14", features = ["tokio", "zstd"] }
