[package]
name = "salt-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
valveprotos = { git = "https://github.com/blukai/valveprotos-rs.git", rev = "71ab6d7de2cd43f567397f65821efd80f5aa0b71", features = ["deadlock"] }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
env_logger = "0.11.5"
arl = "0.2.0"
futures = "0.3.31"

[[bin]]
name = "salt-scraper"
path = "src/main.rs"
